# keyple-service-resource-cpp-lib

./: CMakeLists.txt
src/main/: CMakeLists.txt  CardProfileManagerAdapter.cpp  CardProfileManagerAdapter.h  CardResourceProfileConfigurator.cpp  CardResourceProfileConfigurator.h  CardResourceService.h  CardResourceServiceAdapter.cpp  CardResourceServiceAdapter.h  CardResourceServiceConfiguratorAdapter.cpp  CardResourceServiceProvider.cpp  CardResourceServiceProvider.h  PluginsConfigurator.cpp  PluginsConfigurator.h  PoolPluginsConfigurator.h  ReaderManagerAdapter.cpp  ReaderManagerAdapter.h
src/main/spi/: CardResourceProfileExtension.h  ReaderConfiguratorSpi.h
